# machine-learning-course-by-andrew-ng-in-rust

./: README.md  TODO
assets/week1/: 2.webm
helpers/: Cargo.toml
helpers/src/: canvas.rs  demo_data.rs  lib.rs  math.rs  plotters.rs
week1/: Cargo.toml  TODO
week1/src/: constants.rs  demo_data.rs  gradient_descent.rs  main.rs  visualizer.rs
week2/: Cargo.toml
week2/src/: app_data.rs  constants.rs  demo_data.rs  gradient_descent.rs  learning.rs  main.rs  visualizer_2_features.rs
week3/: Cargo.toml
week3/src/: app_data.rs  constants.rs  demo_data.rs  learning.rs  logistic_regression_visualizer_1_feature.rs  logistic_regression_visualizer_2_features.rs  main.rs
week5/: Cargo.toml
week5/resources/test/: Theta_grad.mat
week5/src/: common.rs  gradient_descent.rs  main.rs
